force-app/main/default/objects/Defender__c/Defender__c.object-meta.xml
<CustomObject>
    <label>Defender</label>
    <pluralLabel>Defenders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Defender Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>