force-app/main/default/objects/Defender__c/fields/Back__c.field-meta.xml
<CustomField>
    <fullName>Back__c</fullName>
    <label>Back</label>
    <type>Lookup</type>
    <referenceTo>Back__c</referenceTo>
    <relationshipName>Defender_Back</relationshipName>
</CustomField>