force-app/main/default/objects/Defender__c/fields/Dice__c.field-meta.xml
<CustomField>
    <fullName>Dice__c</fullName>
    <label>Dice</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>