force-app/main/default/objects/Defender__c/fields/Infantry__c.field-meta.xml
<CustomField>
    <fullName>Infantry__c</fullName>
    <label>Infantry</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>