force-app/main/default/objects/Defender__c/fields/Irregular__c.field-meta.xml
<CustomField>
    <fullName>Irregular__c</fullName>
    <label>Irregular</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>