force-app/main/default/objects/Defender__c/fields/Leader__c.field-meta.xml
<CustomField>
    <fullName>Leader__c</fullName>
    <label>Leader</label>
    <type>Text</type>
    <length>255</length>
</CustomField>